Add Swagger docs for GET /summary, GET /users/{username} and GET /memberships/{username} endpoints
