# routes/summary.go
@@ -7,6 +7,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetSummary    godoc
+// @Summary      Gets a summary of the database
+// @Description  Gets a summary of the database
+// @Tags         Summary
+// @Produce      json
+// @Success      200 {object} data.Summary
+// @Router       /summary [get]
 func GetSummary(c *gin.Context) {
 	success, summary := db.GetSummary(context.TODO())
 
